Call the field in the task 'description' instead of 'name'

--- a/src/main/resources/se/thinkcode/cukenfestes/todolist/todoList.mustache
+++ b/src/main/resources/se/thinkcode/cukenfestes/todolist/todoList.mustache
@@ -28,7 +28,7 @@
 
 <ul>
     {{#tasks}}
-        <li id="taskElement">{{name}}</li>
+        <li id="taskElement">{{description}}</li>
     {{/tasks}}
 </ul>
 
